@@ -1,6 +1,7 @@
 from mr.developer import common
 import os
 import subprocess
+import sys
 
 
 logger = common.logger
@@ -87,9 +88,21 @@ class GitWorkingCopy(common.BaseWorkingCopy):
         name = source['name']
         path = source['path']
         force = kwargs.get('force', False)
+        status = self.status(source)
+        if status != 'clean' and not force:
+            print >>sys.stderr, "The package '%s' is dirty." % name
+            while 1:
+                answer = raw_input("Do you want to update it anyway [y/N]? ")
+                if answer.lower() in ('', 'n', 'no'):
+                    break
+                elif answer.lower() in ('y', 'yes'):
+                    force = True
+                    break
+                else:
+                    print >>sys.stderr, "You have to answer with y, yes, n or no."
         if not self.matches(source):
             raise GitError("Can't update package '%s', because it's URL doesn't match." % name)
-        if self.status(source) != 'clean' and not force:
+        if status != 'clean' and not force:
             raise GitError("Can't update package '%s', because it's dirty." % name)
         return self.git_update(source, **kwargs)
 
